--- a/deploy/openshift/modelcar-pipeline.yaml
+++ b/deploy/openshift/modelcar-pipeline.yaml
@@ -11,10 +11,6 @@ spec:
       type: string
       description: 'Optional array of file patterns to allow default: "*.safetensors", "*.json", "*.txt"'
       default: ""
-    - name: COMPRESS_MODEL
-      type: string
-      description: "Whether to compress the model using llmcompressor (true/false)"
-      default: "false"
     - name: MODEL_NAME
       type: string
       description: "Name of the model to register in the model registry"
@@ -22,10 +18,6 @@ spec:
       type: string
       description: "Version of the model to register"
       default: "1.0.0"
-    - name: SKIP_TASKS
-      type: string
-      description: "Comma-separated list of tasks to skip (e.g., 'cleanup-workspace,pull-model-from-huggingface,compress-model,upload-model-to-s3')"
-      default: ""
     - name: MODEL_REGISTRY_URL
       type: string
       description: "URL of the model registry service"
@@ -45,9 +37,6 @@ spec:
       taskSpec:
         workspaces:
           - name: shared-workspace
-        params:
-          - name: SKIP_TASK
-          - name: SKIP_TASKS
         steps:
           - name: cleanup
             image: registry.access.redhat.com/ubi8/ubi-minimal:latest
@@ -57,24 +46,13 @@ spec:
               #!/bin/sh
               set -e
               echo "Developed by the Red Hat AI Customer Adoption and Innovation team (CAI)"
-              if [[ ",$(params.SKIP_TASKS)," == *",$(params.SKIP_TASK),"* ]]; then
-                echo "Skipping cleanup-workspace task"
-                exit 0
-              fi
               echo "Cleaning up workspace..."
               rm -rf /workspace/shared-workspace/model
-              echo "Workspace cleanup complete!"
               echo "Setting workspace permissions..."
-              mkdir /workspace/shared-workspace/model
-              ls -la /workspace/shared-workspace
+              mkdir -p /workspace/shared-workspace/model
               chown -R 1001:1001 /workspace/shared-workspace/model
               chmod -R 755 /workspace/shared-workspace/model
               echo "Workspace cleanup complete!"
-      params:
-        - name: SKIP_TASK
-          value: "cleanup-workspace"
-        - name: SKIP_TASKS
-          value: $(params.SKIP_TASKS)
       workspaces:
         - name: shared-workspace
           workspace: shared-workspace
@@ -87,8 +65,6 @@ spec:
           - name: HUGGINGFACE_ALLOW_PATTERNS
             type: string
             default: ""
-          - name: SKIP_TASK
-          - name: SKIP_TASKS
         steps:
           - name: download-model
             image: quay.io/hayesphilip/huggingface-modelcar-builder:latest
@@ -99,8 +75,8 @@ spec:
                 memory: "16Gi"
                 cpu: "2"
               requests:
-                memory: "16Gi"
-                cpu: "2"
+                memory: "8Gi"
+                cpu: "1"
             env:
               - name: HUGGINGFACE_TOKEN
                 valueFrom:
@@ -112,70 +88,48 @@ spec:
               #!/bin/sh
               set -e
               echo "Developed by the Red Hat AI Customer Adoption and Innovation team (CAI)"
-              if [[ ",$(params.SKIP_TASKS)," == *",$(params.SKIP_TASK),"* ]]; then
-                echo "Skipping pull-model-from-huggingface task"
-                exit 0
-              fi
               echo "Downloading model from Hugging Face..."
               mkdir -p /workspace/shared-workspace/model
-              CMD="python download_model.py -m $(params.HUGGINGFACE_MODEL) -t /workspace/shared-workspace/model --token $HUGGINGFACE_TOKEN"
+
+              CMD="python download_model.py -m $(params.HUGGINGFACE_MODEL) -t /workspace/shared-workspace/model"
+
+              if [ ! -z "$HUGGINGFACE_TOKEN" ]; then
+                CMD="$CMD --token $HUGGINGFACE_TOKEN"
+              fi
+
               if [ ! -z "$(params.HUGGINGFACE_ALLOW_PATTERNS)" ]; then
                 CMD="$CMD --allow-patterns $(params.HUGGINGFACE_ALLOW_PATTERNS)"
               fi
+
               eval $CMD
               echo "Download complete!"
+
+              # Remove cache if exists
               if [ -d /workspace/shared-workspace/model/.cache ]; then
-                echo "Removing cache"
-                rm -r /workspace/shared-workspace/model/.cache
+                echo "Removing cache..."
+                rm -rf /workspace/shared-workspace/model/.cache
               fi
-              
+
               echo "Model directory structure:"
               echo "------------------------"
-              ls -la /workspace/shared-workspace/model 
-              echo
-              
+              ls -lah /workspace/shared-workspace/model
+              echo ""
+
               if [ -f /workspace/shared-workspace/model/config.json ]; then
-                echo "Config.json contents:"
-                echo "--------------------"
-                cat /workspace/shared-workspace/model/config.json
+                echo "Config.json found"
               else
                 echo "Warning: config.json not found in model directory"
               fi
       params:
         - name: HUGGINGFACE_MODEL
           value: $(params.HUGGINGFACE_MODEL)
-        - name: SKIP_TASK
-          value: "pull-model-from-huggingface"
-        - name: SKIP_TASKS
-          value: $(params.SKIP_TASKS)
+        - name: HUGGINGFACE_ALLOW_PATTERNS
+          value: $(params.HUGGINGFACE_ALLOW_PATTERNS)
       workspaces:
         - name: shared-workspace
           workspace: shared-workspace
       runAfter:
         - cleanup-workspace
-    - name: compress-model
-      taskRef:
-        name: compress-model
-      timeout: 20h
-      when:
-        - input: $(params.COMPRESS_MODEL)
-          operator: in
-          values: ["true"]
-        - input: $(params.SKIP_TASKS)
-          operator: notin
-          values: ["compress-model"]
-      params:
-        - name: COMPRESS_MODEL
-          value: $(params.COMPRESS_MODEL)
-        - name: SKIP_TASK
-          value: "compress-model"
-        - name: SKIP_TASKS
-          value: $(params.SKIP_TASKS)
-      workspaces:
-        - name: shared-workspace
-          workspace: shared-workspace
-      runAfter:
-        - pull-model-from-huggingface
     - name: upload-model-to-s3
       taskSpec:
         workspaces:
@@ -186,8 +140,6 @@ spec:
           - name: MODEL_VERSION
           - name: S3_BUCKET
           - name: S3_ENDPOINT_URL
-          - name: SKIP_TASK
-          - name: SKIP_TASKS
         steps:
           - name: upload-to-s3
             image: quay.io/hayesphilip/s3-uploader:latest
@@ -214,15 +166,13 @@ spec:
                     key: AWS_SECRET_ACCESS_KEY
               - name: WORKSPACE_PATH
                 value: /workspace/shared-workspace/model
-              - name: SKIP_TASK
-                value: $(params.SKIP_TASK)
-              - name: SKIP_TASKS
-                value: $(params.SKIP_TASKS)
             script: |
               #!/bin/bash
               set -e
+              echo "Developed by the Red Hat AI Customer Adoption and Innovation team (CAI)"
               echo "Uploading model to S3..."
               python /usr/local/bin/upload_model.py
+              echo "Upload to S3 complete!"
       params:
         - name: MODEL_NAME
           value: $(params.MODEL_NAME)
@@ -232,17 +182,13 @@ spec:
           value: $(params.S3_BUCKET)
         - name: S3_ENDPOINT_URL
           value: $(params.S3_ENDPOINT_URL)
-        - name: SKIP_TASK
-          value: "upload-model-to-s3"
-        - name: SKIP_TASKS
-          value: $(params.SKIP_TASKS)
       workspaces:
         - name: shared-workspace
           workspace: shared-workspace
         - name: s3-credentials
           workspace: s3-credentials
       runAfter:
-        - compress-model
+        - pull-model-from-huggingface
     - name: register-with-registry
       taskSpec:
         workspaces:
@@ -252,8 +198,6 @@ spec:
           - name: MODEL_VERSION
           - name: HUGGINGFACE_MODEL
           - name: S3_BUCKET
-          - name: SKIP_TASK
-          - name: SKIP_TASKS
           - name: MODEL_REGISTRY_URL
         steps:
           - name: register-model
@@ -261,8 +205,10 @@ spec:
             script: |
               #!/bin/bash
               set -e
+              echo "Developed by the Red Hat AI Customer Adoption and Innovation team (CAI)"
               echo "Running S3 model registration script..."
               python /workspace/register_s3_model.py
+              echo "Registration complete!"
             volumeMounts:
               - name: register-s3-script
                 mountPath: /workspace/register_s3_model.py
@@ -276,10 +222,6 @@ spec:
                 value: $(params.HUGGINGFACE_MODEL)
               - name: S3_BUCKET
                 value: $(params.S3_BUCKET)
-              - name: SKIP_TASK
-                value: $(params.SKIP_TASK)
-              - name: SKIP_TASKS
-                value: $(params.SKIP_TASKS)
               - name: MODEL_REGISTRY_URL
                 value: $(params.MODEL_REGISTRY_URL)
               - name: CLUSTER_DOMAIN
@@ -297,10 +239,6 @@ spec:
           value: $(params.HUGGINGFACE_MODEL)
         - name: S3_BUCKET
           value: $(params.S3_BUCKET)
-        - name: SKIP_TASK
-          value: "register-with-registry"
-        - name: SKIP_TASKS
-          value: $(params.SKIP_TASKS)
         - name: MODEL_REGISTRY_URL
           value: $(params.MODEL_REGISTRY_URL)
       workspaces:
