--- a/deploy/openshift/modelcar-storage.yaml
+++ b/deploy/openshift/modelcar-storage.yaml
@@ -1,10 +1,13 @@
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: modelcar-storage
+  namespace: modelcar-pipelines
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 300Gi
+      storage: 50Gi
+  storageClassName: gp3-csi  # Adjust based on your cluster's storage class
